# ClassTemplates_inheritance

./: .gitignore  CMakeLists.txt
modules/: CMakeLists.txt  template_base.cpp  template_base.hpp  template_born.cpp  template_born.hpp
src/: CMakeLists.txt  main.cpp
